--- a/babychart/pubspec.yaml
+++ b/babychart/pubspec.yaml
@@ -35,10 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  outline_gradient_button: ^2.0.1+1
+  fl_chart: ^0.68.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -63,8 +66,16 @@ flutter:
     - assets/baby_Img.png
     - assets/midwife.png
     - assets/parent.png
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+    - assets/login.png
+    - assets/facebook.png
+    - assets/google.png
+    - assets/signup.png
+    - assets/plus.png
+    - assets/piumi.png
+    - assets/midSignIn.png
+    - assets/midSignUp.png
+    #   - images/a_dot_burr.jpeg
+    #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
